[package]
name = "mona_spy"
version = "0.1.0"
authors = ["Mateus de Castro <samuraiexx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
json = "0.12.4"
parse_wiki_text = "0.1.5"
chrono = "0.4.19"
async-trait = "0.1.42"
serde = "1.0.118"