[package]
name = "mona_spy"
version = "0.1.0"
authors = ["Mateus de Castro <samuraiexx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3" }
reqwest = { version = "0.10", features = ["json"] }
json = "0.12.4"
parse_wiki_text = "0.1.5"
async-trait = "0.1.42"
serde = "1.0.118"