[package]
name = "mona_spy"
version = "0.1.0"
authors = ["Mateus de Castro <samuraiexx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.18.0", features = ["async-std-comp"] }
actix-web = { version = "3" }
reqwest = { version = "0.10", features = ["json"] }
async-std = "1.8.0"
serde_json = "1.0"
parse_wiki_text = "0.1.5"
async-trait = "0.1.42"
serde = "1.0.118"